--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>BlaXrew Studios</title>
-    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
-    <meta property="og:type" content="website">
-    <meta name="description" content="Software, Games &amp; More">
-    <meta name="twitter:title" content="BlaXrew Studios">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:description" content="Software, Games &amp; More">
+    <meta name="twitter:title" content="BlaXrew Studios">
+    <meta name="description" content="Software, Games &amp; More">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
+    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
@@ -44,7 +44,9 @@
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://blaxrew-studios.vision/RCB">RCB</a><a class="dropdown-item" href="#">LaS</a><a class="dropdown-item" href="#">Driving Simulator</a>
+                                <div class="dropdown-divider"></div>
+                                <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://www.blaxrew-studios.vision/mdscript-docs/">MD Script</a>
                             </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
@@ -59,20 +61,20 @@
             <div class="row">
                 <div class="col">
                     <h2 class="text-white">About us</h2>
-                    <p class="text-white-50">Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp;<a href="projects.html">here</a>.<br></p>
+                    <p class="text-white-50" style="color: var(--blue);">Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp;<a href="projects.html">here</a>.<br></p>
                     <h2 class="text-white">Careers</h2>
                     <p class="text-white-50">If you think you are the right one and want to apply fill in the form below&nbsp;or send an email to blaxrew.studios@gmail.com with the subject "Application"&nbsp;to apply. We are not&nbsp;training you. When you apply and we accept, we&nbsp;are going to test if you fit to the rest of the team. This is an unpaid job, that means you will not gain any money at the moment if&nbsp;you are part of the team.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="bg-dark contact-clean" style="padding-top: 40px;">
+    <div class="bg-dark contact-clean" id="contact" style="padding-top: 40px;">
         <form class="bg-dark shadow-lg" style="padding-top: 0px;" data-bss-recipient="c6268884f198426de24f9a36bbd9ca7d" data-bss-subject="contact">
             <h2 class="text-center text-white" style="padding: 10px;">Contact us</h2>
             <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div><input class="border-dark form-control is-invalid" type="email" name="email" placeholder="Email" inputmode="email" style="margin-bottom: 15px;" required="" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[A-Za-z]{2,4}"><input class="form-control" type="text" name="subject" placeholder="Subject" style="margin-bottom: 15px;">
             <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
             <div class="form-group"><button class="btn btn-primary disabled btn-block" id="asend" type="submit" disabled="" style="margin-left: 0px;">send </button></div>
-            <div class="form-check" style="padding-top: 10px;"><input class="form-check-input" type="checkbox" id="atogBtn"><label class="form-check-label text-light" for="tapa" style="font-size: 0.83em;">By continuing you agree to our <a href="Terms%20of%20Service.html">Tems of&nbsp; Service</a>&nbsp; and&nbsp; <a href="privacy%20policy.html">Privacy&nbsp; Policy</a>.&nbsp;</label></div>
+            <div class="form-check d-inline-block" style="padding-top: 10px;"><input class="form-check-input" type="checkbox" id="atogBtn"><label class="form-check-label text-light" for="tapa" style="font-size: 0.83em;">By continuing you agree to our <a href="Terms%20of%20Service.html">Tems of&nbsp; Service</a>&nbsp; and&nbsp; <a href="privacy%20policy.html">Privacy&nbsp; Policy</a>.&nbsp;</label></div>
         </form>
     </div>
     <div class="text-white bg-dark team-boxed">
