--- a/las.html
+++ b/las.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2 class="text-white">Devils Hunt Trailer</h2>
+                    <h2 class="text-white">Lights And Shadows Trailer</h2>
                     <p class="text-white-50">At the moment we do not have a trailer for the game. We used one of Blackture's Videos as placeholder. Trailer is coming soon.<br></p>
                 </div>
                 <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/NiWuJxWX0ug?autoplay=1&amp;mute=1" width="560" height="315" style="width: 100%;"></iframe></div>
@@ -85,9 +85,10 @@
     <div class="simple-slider">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="bg-dark swiper-slide"><img src="assets/img/image005.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
-                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/image005.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
-                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/image005.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
+                <div class="bg-dark swiper-slide"><img src="assets/img/Banner%201%201920x1080.png" style="background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);width: 66%;margin-left: 17.5%;"></div>
+                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/grafik.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
+                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/banner-907x510.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
+                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/lula.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
             </div>
             <div class="swiper-pagination"></div>
             <div class="swiper-button-prev"></div>
@@ -107,16 +108,16 @@
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane active" role="tabpanel" id="tab-1">
-                                <p><br>A software related boardgame (Multiplayer, Singleplayer, Realife boardgame). This means this game was originally designed a boardgame but the player's stats calculation got to complicated after a while. That is why we wrote a software for our game. If you buy the boardgame the software is normally included.<br></p>
+                                <p class="text-left">Thig is a singleplayer FPS controlled story adventure game.<br>Make tasks and make decisions wisely because they could lead you to the abyss. Go with or against the light. Now it's your turn. This game uses RTX!<br>Get the game as we release it if you want to know more about the story. Subscribe to the newsletter to get those information via mail.<br><br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-2">
-                                <p><br>The main software is already released. You can get access to the software on request. This is just an ALPHA-Release that means you may experience bugs or issues.<br></p>
+                                <p class="text-left">The game is in progress the story is finished at the moment.<br>In designing and developing process.<br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-3">
-                                <p><br>Our plans to that game are to make a online multiplayer which will cost for those who did not buy the boardgame. A player versus bot mode is planned to. We want to add a bug report section in the software too.<br></p>
+                                <p class="text-left">The future plans are the game itself.<br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-4">
-                                <p class="text-left"><strong>PRE-ALPHA</strong><br>0.0.1<br>Released the application's foundation<br><br>0.0.2<br>Added more Features<br>Bug Fixes<br><br>0.1.0<br>Added more features<br>fixed some bugs<br><br>0.1.1<br>Fixed design errors<br>Graphic fixes<br>Bug fixes<br><br>0.1.2<br>Fixed some bugs<br><br>0.1.3<br>Renewed failed objects<br><br>0.2.0<br>Added features<br><br>0.3.0<br>Fixed some features<br>Added features<br><br>0.3.1<br>Added small necessary features<br><br>0.3.2<br>Fixed some graphic glitches<br>Added some missing functions<br><br>0.3.3<br>Changed old useless contents<br>Renewed some features<br><br>0.3.4a<br>Fixed bugs<br>Added features<br><br>0.3.4b<br>Removed some glitches<br>Removed or fixed some bugs<br>Renewed broken features<br><br>0.3.4c<br>Removed failed, glitching or bugging things<br>Renewed some renewable objects<br><br>0.4.0<br>Added features and functions<br><br>0.4.1<br>Fixed some bugs<br>Removed some bugs<br><br>0.4.2a<br>Added features<br>Removed some bugs<br><br>0.4.2b<br>Fixed issues of the version 0.4.2a<br><br><strong>ALPHA</strong><br>1.0<br>Added many features<br>Fixed or removed old bugs and glitches<br>- ALPHA release<br><br>1.1<br>Fixed some issues of version 1.0<br><br>1.2<br>Removed and renewed failed mechanics<br><br>1.3<br>Fixed some issues and bugs<br>Improved features<br><br>1.4<br>Fixed some graphics<br>Renewed the design<br><br>1.5a<br>Solved some issues<br><br>1.5b<br>Fixed fails which ocurred in the version 1.5a - BETA<br><br>1.6a<br>Some bugs are now fixed<br>Removed some graphic glitches<br><br>1.6b<br>Some bugs are now fixed<br>Removed some 1.6a graphic glitches<br><br>1.6c<br>Fixed some of the bugs caused by the version 1.6b<br><br>1.7a DRAFT ALPHA<br>Added field saving systems<br>Fixed some player count issues<br>Fixed player names bugs<br>Replaced outdated intro<br>Added new draft loading systems<br><br><br>DRAFT ALPHA<br>1.7b<br>Added field saving systems<br>Fixed some player count issues<br>Fixed player names bugs<br>Replaced outdated intro<br>Added new draft loading systems<br><br><strong>ALPHA</strong><br>1.7<br>Added field saving systems<br>Fixed some player count issues<br>Fixed player names bugs<br>Replaced outdated intro<br>Added new loading systems<br><br>1.7a<br>Fixed a panel issue in the loading UI<br>Fixed saving panel<br>Player 3 saving issue is now fixed<br></p>
+                                <p class="text-left"><strong>TEST&nbsp; VERSION</strong><br>0.0.1<br>- Initial Commit<br><br>0.0.1a<br>- Beginnings of the Light Temple<br><br>0.0.2<br>- A complete new scene<br>- Start of a questing system<br>- Start of a interaction system<br>- Average player-movement system<br><br>0.0.3<br>- Improve graphics<br>- Add popup for quest completions<br>- Add animations tp "completed" popup<br><br>0.0.4<br>- Fix to the directional light and volume<br>- Add new stuff to the scene</p>
                             </div>
                         </div>
                     </div>
@@ -167,18 +168,15 @@
                 <p class="text-center text-white-50">Here you find&nbsp; the needed links to buy or download the game</p>
             </div>
             <div class="row articles">
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
-                    <h3 class="name">Devils Hunt Software</h3>
-                    <p class="text-white-50 description">Download and start the software. Now you can play the boardgame together.<br><br>For more information click&nbsp; &nbsp;<a href="devils-hunt.html">here</a>.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="http://admin.blaxrew-studios.vision" title="Download"><i class="material-icons">file_download</i></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1" title="Download"></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a></div>
+                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/Banner%201%201920x1080.png"></a>
+                    <h3 class="name">Lights And Shadows</h3>
+                    <p class="text-white-50 description">The main game with it's content is already playable for testers. Click on the download symbol below to go to the download of Lights And Shadows</p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://bxs-admin.herokuapp.com" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
+                            <path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z" fill="currentColor"></path>
+                            <path d="M4 14H6V18H18V14H20V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V14Z" fill="currentColor"></path>
+                        </svg></a><a class="action" href="#"></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
-                    <h3 class="name">Devils Hunt DLC-Pack</h3>
-                    <p class="text-white-50 description">This DLC pack includes the online and player versus computer mode.&nbsp;Subscribe to the newsletter and we notify you when the online mode or the versus computer mode is out.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="#" title="Buy for $∞"><i class="la la-money"></i></a><a class="action" href="#"></a>
-                </div>
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
-                    <h3 class="name"><strong>Devils Hunt Boardgame</strong><br></h3>
-                    <p class="text-white-50 description">Download and start the software. With this game board and cards you are able to play it in real life. We make you an offer the offered price may change over time.<br><br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="/about.html#contact" title="Buy for $+∞"><i class="la la-money"></i></a>
-                </div>
+                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="#" title="Buy for $+∞"></a></div>
             </div>
         </div>
     </div>
