--- a/forum.html
+++ b/forum.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>BlaXrew Studios</title>
-    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
-    <meta property="og:type" content="website">
-    <meta name="description" content="Software, Games &amp; More">
-    <meta name="twitter:title" content="BlaXrew Studios">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:description" content="Software, Games &amp; More">
+    <meta name="twitter:title" content="BlaXrew Studios">
+    <meta name="description" content="Software, Games &amp; More">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
+    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
     <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
